--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,9 @@ android {
         targetCompatibility = 1.8
     }
 
+    viewBinding {
+        enabled = true
+    }
 }
 
 dependencies {
@@ -53,6 +56,17 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:19.2.0'
     implementation platform('com.google.firebase:firebase-bom:25.12.0')
     implementation 'com.google.android.libraries.places:places:2.4.0'
+
+    implementation 'com.google.firebase:firebase-messaging:21.0.0'
+
+    //lottie
+    implementation 'com.airbnb.android:lottie:3.5.0'
+
+    //retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.1.0'
 
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.google.android.gms:play-services-location:17.1.0'
