--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,8 @@ dependencies {
 
     //animacion driver
     implementation 'com.airbnb.android:lottie:2.8.0'
+    //lng
+
 
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.google.android.gms:play-services-location:17.1.0'
