--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,8 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
+
+
     <uses-feature
         android:name="android.hardware.camera2"
         android:required="true" />
@@ -28,7 +30,16 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".driver.RequestDriverActivity"></activity>
+        <service
+            android:name=".service.MyFirebaseMessagingClient"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
+        <activity android:name=".retrofit.RetrofitClientActivity"></activity>
+        <activity android:name=".driver.RequestDriverActivity" />
         <activity android:name=".llmadasDiariasActivity" />
         <activity android:name=".MapBoxPlaceActivity" />
         <activity
