--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
     <uses-permission android:name="android.permission.ACCESS_MEDIA_LOCATION" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
 
 
@@ -30,16 +31,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <service
-            android:name=".service.MyFirebaseMessagingClient"
-            android:exported="false">
-            <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT" />
-            </intent-filter>
-        </service>
 
-        <activity android:name=".retrofit.RetrofitClientActivity"></activity>
-        <activity android:name=".driver.RequestDriverActivity" />
+        <activity android:name=".client.RequestDriverActivity" />
         <activity android:name=".llmadasDiariasActivity" />
         <activity android:name=".MapBoxPlaceActivity" />
         <activity
