--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,10 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'org.osmdroid:osmdroid-android:6.1.0'
 
+    //diseño
+    implementation 'com.github.florent37:shapeofview:1.3.2'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
     //firebase
     implementation 'com.google.firebase:firebase-database:19.5.1'
     implementation 'com.google.firebase:firebase-core:18.0.0'
@@ -61,7 +65,7 @@ dependencies {
     implementation 'com.google.android.libraries.places:places:2.4.0'
     implementation 'com.google.maps.android:android-maps-utils:0.5'
 
-
+    //messaging
     implementation 'com.google.firebase:firebase-messaging:21.0.0'
 
     //lottie
@@ -71,11 +75,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.retrofit2:converter-scalars:2.1.0'
-
-    //animacion driver
-    implementation 'com.airbnb.android:lottie:3.5.0'
-    //lng
-
 
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.google.android.gms:play-services-location:17.1.0'
