--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,11 +10,14 @@ android {
         applicationId "com.example.femtaxi"
         minSdkVersion 17
         targetSdkVersion 30
-        versionCode 2
-        versionName "1.0.2"
+        versionCode 3
+        versionName "1.0.3"
         multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        buildConfigField "String", "FILES_AUTHORITY", "\"com.example.femtaxi\""
+        buildConfigField "String", "PATH_NAME_APP", "\"femtaxi\""
     }
 
     buildTypes {
@@ -37,20 +40,14 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'com.google.firebase:firebase-analytics:18.0.0'
-    implementation 'com.firebase:geofire-android:2.2.0'
-    implementation 'com.android.support:multidex:1.0.3'
-
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.navigation:navigation-fragment:2.3.2'
     implementation 'androidx.navigation:navigation-ui:2.3.2'
     testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'org.osmdroid:osmdroid-android:6.1.0'
 
     //diseño
@@ -60,12 +57,14 @@ dependencies {
     //firebase
     implementation 'com.google.firebase:firebase-database:19.5.1'
     implementation 'com.google.firebase:firebase-core:18.0.0'
-    implementation 'com.google.firebase:firebase-auth:20.0.1'
     implementation 'com.google.firebase:firebase-firestore:22.0.0'
-    implementation 'com.google.firebase:firebase-storage:19.2.0'
     implementation platform('com.google.firebase:firebase-bom:25.12.0')
-    implementation 'com.google.android.libraries.places:places:2.4.0'
-    implementation 'com.google.maps.android:android-maps-utils:0.5'
+
+    //storage
+    implementation 'com.google.firebase:firebase-storage:19.2.0'
+
+    //geofire
+    implementation 'com.firebase:geofire-android:2.2.0'
 
     //crashlytics
     implementation 'com.google.firebase:firebase-analytics:18.0.0'
@@ -74,8 +73,16 @@ dependencies {
     //messaging
     implementation 'com.google.firebase:firebase-messaging:21.0.0'
 
-    //lottie
+    //maps
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.google.android.libraries.places:places:2.4.0'
+    implementation 'com.google.maps.android:android-maps-utils:0.5'
 
+    //login google
+    implementation 'com.google.firebase:firebase-auth:20.0.1'
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
+
+    //lottie
     implementation 'com.airbnb.android:lottie:3.5.0'
 
     //retrofit
@@ -90,11 +97,16 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
-    //login google
-    implementation 'com.google.firebase:firebase-auth:20.0.1'
-    implementation 'com.google.android.gms:play-services-auth:19.0.0'
-
     //mapBox
     implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:9.2.1'
     implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-places-v9:0.12.0'
+
+    //permission
+    implementation 'com.github.kayvannj:PermissionUtils:1.0.9'
+
+    //multidex
+    implementation 'com.android.support:multidex:1.0.3'
+
+    //
+    implementation 'id.zelory:compressor:2.1.0'
 }
