--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,4 +109,9 @@ dependencies {
 
     //
     implementation 'id.zelory:compressor:2.1.0'
+
+    implementation 'androidx.navigation:navigation-fragment:2.3.2'
+    implementation 'androidx.navigation:navigation-ui:2.3.2'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
 }
