--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "pe.com.android.femtaxi"
         minSdkVersion 17
         targetSdkVersion 30
-        versionCode 1
-        versionName "1.0.0"
+        versionCode 3
+        versionName "1.0.3"
         multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -20,7 +20,7 @@ android {
         buildConfigField "String", "PATH_NAME_APP", "\"femtaxi\""
 
         ndk {
-           // debugSymbolLevel 'FULL'
+            debugSymbolLevel 'FULL'
         }
     }
 
@@ -40,6 +40,7 @@ android {
     buildFeatures {
         viewBinding true
     }
+    ndkVersion '21.3.6528147'
 }
 
 dependencies {
