--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "pe.com.android.femtaxi"
         minSdkVersion 17
         targetSdkVersion 30
-        versionCode 7
-        versionName "1.0.7"
+        versionCode 11
+        versionName "1.0.11"
         multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -65,19 +65,19 @@ dependencies {
 
     //firebase
     implementation 'com.google.firebase:firebase-database:19.6.0'
-    implementation 'com.google.firebase:firebase-core:18.0.0'
-    implementation 'com.google.firebase:firebase-firestore:22.0.1'
+    implementation 'com.google.firebase:firebase-core:18.0.2'
+    implementation 'com.google.firebase:firebase-firestore:22.0.2'
     implementation platform('com.google.firebase:firebase-bom:25.12.0')
 
     //storage
     implementation 'com.google.firebase:firebase-storage:19.2.1'
 
     //geofire
-    implementation 'com.firebase:geofire-android:2.2.0'
+    implementation 'com.firebase:geofire-android:3.1.0'
 
     //crashlytics
-    implementation 'com.google.firebase:firebase-analytics:18.0.0'
-    implementation 'com.google.firebase:firebase-crashlytics:17.3.0'
+    implementation 'com.google.firebase:firebase-analytics:18.0.2'
+    implementation 'com.google.firebase:firebase-crashlytics:17.3.1'
 
     //messaging
     implementation 'com.google.firebase:firebase-messaging:21.0.1'
@@ -88,11 +88,11 @@ dependencies {
     implementation 'com.google.maps.android:android-maps-utils:2.2.0'
 
     //login google
-    implementation 'com.google.firebase:firebase-auth:20.0.1'
+    implementation 'com.google.firebase:firebase-auth:20.0.2'
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
 
     //lottie
-    implementation 'com.airbnb.android:lottie:3.5.0'
+    implementation 'com.airbnb.android:lottie:3.6.0'
 
     //retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -106,11 +106,11 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
     //mapBox
-    implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:9.2.1'
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:9.6.0-alpha.1'
     implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-places-v9:0.12.0'
 
     //permission
-    implementation 'com.github.kayvannj:PermissionUtils:1.0.9'
+    implementation 'com.permissionx.guolindev:permissionx:1.4.0'
 
     //multidex
     implementation 'com.android.support:multidex:1.0.3'
