--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar"
         android:usesCleartextTraffic="true">
-
+        <activity android:name=".admiSoft.LoginAdmiActivity"></activity>
+        <activity android:name=".webRegistroActivity" />
+        <activity android:name=".admiSoft.OptionDesarrolloActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -36,71 +38,55 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".driver.registerDriver.UploadSetareActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <activity
             android:name=".driver.registerDriver.UploadRevTecActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <activity
             android:name=".IdentVehicularActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <activity
             android:name=".driver.registerDriver.UploadDriverActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <activity
             android:name=".driver.registerDriver.UploadSoatActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <activity
             android:name=".driver.registerDriver.UploadDNIActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <activity
             android:name=".driver.registerDriver.UploadPenalesActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <activity
             android:name=".driver.registerDriver.UploadPolicialActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <activity
             android:name=".client.CalificationClientActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <activity
             android:name=".driver.ProfileDriverActivity"
             android:parentActivityName=".driver.MapDriverActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <activity
             android:name=".driver.HistoryBookingDriverActivity"
             android:parentActivityName=".driver.MapDriverActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <activity
             android:name=".driver.CalificationDriverActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <activity
             android:name=".client.RequestDriverActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <activity
             android:name=".client.DetailRequestActivity"
             android:parentActivityName=".client.MapClienteActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <activity
             android:name=".client.ProfileClientActivity"
             android:parentActivityName=".client.MapClienteActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <activity
             android:name=".client.HistoryBookingClientActivity"
             android:parentActivityName=".client.MapClienteActivity"
@@ -114,43 +100,34 @@
             android:name=".driver.loginDriveActivity"
             android:parentActivityName=".MainActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <activity
             android:name=".client.MapClienteActivity"
             android:parentActivityName=".MainActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <activity
             android:name=".client.LoginClientActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <activity
             android:name=".driver.MapDriverActivity"
             android:parentActivityName=".driver.OpcionDualDriverActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <activity
             android:name=".driver.registerDriver.RegistroDriverSegundoActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <activity
             android:name=".driver.registerDriver.RegistroDriverPrimerActivity"
             android:parentActivityName=".driver.OpcionDualDriverActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <activity
             android:name=".driver.OpcionDualDriverActivity"
             android:parentActivityName=".MainActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <activity
             android:name=".driver.NotificationBookingActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <activity
             android:name=".driver.MapDriveBookingActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <activity
             android:name=".client.MapClientBookingActivity"
             android:theme="@style/AppTheme.NoActionBar" />
@@ -185,7 +162,6 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-
     </application>
 
 </manifest>
