--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,14 +4,14 @@ apply plugin: 'com.google.firebase.crashlytics'
 
 android {
     compileSdkVersion 30
-    buildToolsVersion "30.0.2"
+    buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "pe.com.android.femtaxi"
         minSdkVersion 17
         targetSdkVersion 30
-        versionCode 11
-        versionName "1.0.11"
+        versionCode 12
+        versionName "1.0.12"
         multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -20,7 +20,16 @@ android {
         buildConfigField "String", "PATH_NAME_APP", "\"femtaxi\""
 
         ndk {
-           // debugSymbolLevel 'FULL'
+            //debugSymbolLevel 'FULL'
+        }
+
+        signingConfigs {
+            config {
+                storeFile file('G:\\Trabajos\\EdgarPacheco\\KEY\\FemTaxi.jks')
+                storePassword 'FemTaxi159*'
+                keyAlias 'FemTaxi'
+                keyPassword 'FemTaxi159*'
+            }
         }
 
         testFunctionalTest true
@@ -44,17 +53,30 @@ android {
         viewBinding true
     }
     ndkVersion '21.3.6528147'
+
+    applicationVariants.all { variant ->
+        variant.outputs.each { output ->
+            def projectName = "Fem Taxi"
+            def date = new Date().format('ddMMyyyy', TimeZone.getTimeZone("GMT-5"))
+            def time = new Date().format('HHmmss', TimeZone.getTimeZone("GMT-5"))
+            def apkName = "${time}-${date}-${projectName}-${variant.versionName}-${variant.versionCode}-${variant.buildType.name}" + ".apk"
+            def outputDir = new File("${rootProject.rootDir}/app/build/outputs/apk/${variant.flavorName}/${variant.buildType.name}")
+            variant.packageApplicationProvider.get().outputDirectory = new File("$outputDir")
+            output.outputFileName = apkName
+        }
+    }
+
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'com.google.android.material:material:1.2.1'
-    implementation 'androidx.navigation:navigation-fragment:2.3.2'
-    implementation 'androidx.navigation:navigation-ui:2.3.2'
-    implementation 'junit:junit:4.13.1'
-    testImplementation 'junit:junit:4.13.1'
+    implementation 'com.google.android.material:material:1.3.0'
+    implementation 'androidx.navigation:navigation-fragment:2.3.3'
+    implementation 'androidx.navigation:navigation-ui:2.3.3'
+    implementation 'junit:junit:4.13.2'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'org.osmdroid:osmdroid-android:6.1.8'
@@ -66,7 +88,7 @@ dependencies {
     //firebase
     implementation 'com.google.firebase:firebase-database:19.6.0'
     implementation 'com.google.firebase:firebase-core:18.0.2'
-    implementation 'com.google.firebase:firebase-firestore:22.0.2'
+    implementation 'com.google.firebase:firebase-firestore:22.1.1'
     implementation platform('com.google.firebase:firebase-bom:25.12.0')
 
     //storage
@@ -88,7 +110,7 @@ dependencies {
     implementation 'com.google.maps.android:android-maps-utils:2.2.0'
 
     //login google
-    implementation 'com.google.firebase:firebase-auth:20.0.2'
+    implementation 'com.google.firebase:firebase-auth:20.0.3'
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
 
     //lottie
@@ -99,11 +121,11 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
 
-    implementation 'com.google.android.gms:play-services-location:17.1.0'
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
     implementation 'org.jbundle.util.osgi.wrapped:org.jbundle.util.osgi.wrapped.org.apache.http.client:4.1.2'
 
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
     //mapBox
     implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:9.6.0-alpha.1'
