--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ android {
         buildConfigField "String", "PATH_NAME_APP", "\"femtaxi\""
 
         ndk {
-            //debugSymbolLevel 'FULL'
+            debugSymbolLevel 'FULL'
         }
 
         signingConfigs {
@@ -36,11 +36,25 @@ android {
         testHandleProfiling true
     }
 
+    dexOptions {
+        javaMaxHeapSize "4g"
+    }
+
     buildTypes {
         release {
             minifyEnabled true
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+
+        repositories {
+            mavenCentral()
+            maven {
+                url 'https://oss.sonatype.org/content/repositories/ksoap2-android-releases/'
+            }
+            maven {
+                url "https://jitpack.io"
+            }
         }
     }
 
@@ -70,11 +84,11 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.google.android.material:material:1.3.0'
-    implementation 'androidx.navigation:navigation-fragment:2.3.3'
-    implementation 'androidx.navigation:navigation-ui:2.3.3'
+    implementation 'androidx.navigation:navigation-fragment:2.3.5'
+    implementation 'androidx.navigation:navigation-ui:2.3.5'
     implementation 'junit:junit:4.13.2'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
@@ -86,35 +100,46 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
     //firebase
-    implementation 'com.google.firebase:firebase-database:19.6.0'
-    implementation 'com.google.firebase:firebase-core:18.0.2'
-    implementation 'com.google.firebase:firebase-firestore:22.1.1'
+    implementation 'com.google.firebase:firebase-database:20.0.0'
+    implementation 'com.google.firebase:firebase-core:19.0.0'
+    implementation 'com.google.firebase:firebase-firestore:23.0.0'
     implementation platform('com.google.firebase:firebase-bom:25.12.0')
 
     //storage
-    implementation 'com.google.firebase:firebase-storage:19.2.1'
+    implementation 'com.google.firebase:firebase-storage:20.0.0'
 
     //geofire
     implementation 'com.firebase:geofire-android:3.1.0'
 
     //crashlytics
-    implementation 'com.google.firebase:firebase-analytics:18.0.2'
-    implementation 'com.google.firebase:firebase-crashlytics:17.3.1'
+    implementation 'com.google.firebase:firebase-analytics:19.0.0'
+    implementation 'com.google.firebase:firebase-crashlytics:18.0.0'
 
     //messaging
-    implementation 'com.google.firebase:firebase-messaging:21.0.1'
+    implementation 'com.google.firebase:firebase-messaging:22.0.0'
 
-    //maps
-    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    //maps google
+    implementation 'com.google.android.gms:play-services-maps:17.0.1'
     implementation 'com.google.android.libraries.places:places:2.4.0'
     implementation 'com.google.maps.android:android-maps-utils:2.2.0'
 
+    //map mapBox
+    implementation ('com.mapbox.mapboxsdk:mapbox-android-sdk:9.6.1'){
+        exclude group: 'group_name', module: 'module_name'
+    }
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-places-v9:0.12.0'
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-annotation-v9:0.9.0'
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-annotation-v9:0.10.0-SNAPSHOT'
+
+    //Libreria MapBox Navigation
+    //implementation 'com.mapbox.mapboxsdk:mapbox-android-navigation-ui:0.42.6'
+
     //login google
-    implementation 'com.google.firebase:firebase-auth:20.0.3'
+    implementation 'com.google.firebase:firebase-auth:21.0.1'
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
 
     //lottie
-    implementation 'com.airbnb.android:lottie:3.6.0'
+    implementation 'com.airbnb.android:lottie:3.6.1'
 
     //retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -126,10 +151,6 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
-
-    //mapBox
-    implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:9.6.0-alpha.1'
-    implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-places-v9:0.12.0'
 
     //permission
     implementation 'com.permissionx.guolindev:permissionx:1.4.0'
