--- a/build.gradle
+++ b/build.gradle
@@ -7,27 +7,26 @@ buildscript {
         maven {
             url 'https://maven.google.com'
         }
-        
+
         maven {
             url 'https://api.mapbox.com/downloads/v2/releases/maven'
-
             authentication {
                 basic(BasicAuthentication)
             }
-
             credentials {
-                // Do not change the username below.
-                // This should always be `mapbox` (not your username).
                 username = 'mapbox'
-                // Use the secret token you stored in gradle.properties as the password
                 password = project.properties['MAPBOX_DOWNLOADS_TOKEN'] ?: ""
             }
         }
+
+        maven {
+            url "http://oss.sonatype.org/content/repositories/snapshots/"
+        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.2'
-        classpath 'com.google.gms:google-services:4.3.5'
-        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.5.1'
+        classpath 'com.android.tools.build:gradle:4.2.1'
+        classpath 'com.google.gms:google-services:4.3.8'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.6.1'
     }
 }
 
@@ -35,6 +34,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        mavenCentral()
 
         maven {
             url 'https://maven.google.com'
@@ -42,18 +42,17 @@ allprojects {
 
         maven {
             url 'https://api.mapbox.com/downloads/v2/releases/maven'
-
             authentication {
                 basic(BasicAuthentication)
             }
-
             credentials {
-                // Do not change the username below.
-                // This should always be `mapbox` (not your username).
                 username = 'mapbox'
-                // Use the secret token you stored in gradle.properties as the password
                 password = project.properties['MAPBOX_DOWNLOADS_TOKEN'] ?: ""
             }
+        }
+
+        maven {
+            url "http://oss.sonatype.org/content/repositories/snapshots/"
         }
     }
 }
